# mcp-scan

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
npm/: README.md  package.json  update_package.py  write_package.py
src/mcp_scan/: MCPScanner.py  StorageFile.py  __init__.py  cli.py  gateway.py  identity.py  mcp_client.py  models.py  paths.py  policy.gr  printer.py  run.py  suppressIO.py  surpressIO.py  upload.py  utils.py  verify_api.py  version.py
src/mcp_scan_server/: activity_logger.py  format_guardrail.py  models.py  parse_config.py  server.py  session_store.py
src/mcp_scan_server/guardrail_templates/: links.gr  moderated.gr  pii.gr  secrets.gr
src/mcp_scan_server/guardrail_templates/tool_templates/: disable_tool.gr
src/mcp_scan_server/routes/: policies.py  push.py  trace.py  user.py
tests/: __init__.py  conftest.py  test_configs.json
tests/e2e/: __init__.py  conftest.py  test_full_proxy_flow.py  test_full_scan_flow.py
tests/mcp_servers/: math_server.py  mcp_config.json  multiple_transport_server.py  weather_server.py
tests/mcp_servers/configs_files/: all_config.json  multiple_transport.json  weather_config.json
tests/mcp_servers/signatures/: math_server_signature.json  weather_server_signature.json
tests/unit/: __init__.py  conftest.py  test_control_server.py  test_gateway.py  test_mcp_client.py  test_mcp_scan_server.py  test_scanner.py  test_session.py  test_storage_file.py  test_utils.py
