[project]
name = "mcp-scan"
version = "0.1.4.1"
description = "MCP Scan tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse>=1.4.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.scripts]
mcp-scan = "mcp_scan.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_scan"]
